update nie działa

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -8,4 +8,9 @@
     <Folder Include="UnitOfWork\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="WinInsider.System.Net.Http.Formatting" Version="1.0.5" />
+  </ItemGroup>
+
 </Project>
